# grape_core

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  tauri_commands.rs
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/auth/: mod.rs
src/cli/: mod.rs
src/crypto/: mod.rs
src/identity/: mod.rs
src/network/: behaviour.rs  bootstrap.rs  kad_store.rs  mod.rs  transport.rs
src/protocol/: mod.rs
src/storage/: mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx
ui/src/api/: index.ts
ui/src/components/: AuthScreen.tsx  CallScreen.tsx  ChatArea.tsx  ContactList.tsx  IncomingCallModal.tsx
ui/src/hooks/: useNetworkEvents.ts  useWebRTC.ts
ui/src/styles/: index.css
ui/src/types/: index.ts
