[package]
name = "videocalls"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
b58 = "0.1.2"
bincode = "1.3"
blake3 = "1.8.3"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
futures = "0.3.31"
libp2p = { version = "0.56.0", features = ["tcp", "quic", "noise", "yamux", "gossipsub", "kad", "mdns", "relay", "dcutr", "identify", "ping", "macros", "tokio", "request-response"] }
noise = "0.9.0"
rand = "0.8"
rand_core = "0.6"
ring = "0.17.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sled = "0.34.7"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-native-tls"] }
tauri = "2.10.2"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.20.0", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
